deployment/affiche/ingress-affiche.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-affiche
  namespace: ns-2024-sae5-y11
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
  - host: ns-2024-sae5-y11-affiche.labs.iut-larochelle.fr 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-affiche
            port:
              number: 80
